# moonshine.cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml  clang-format-check.yaml  release.yaml
cmake/: FetchNlohmannJson.cmake  FetchOnnxruntime.cmake  FetchSDL.cmake  moonshine-config.cmake.in
examples/: CMakeLists.txt  demo.cpp  live.cpp
scripts/: build.ps1  build.sh  onnx_get_names.py
src/: moonshine.cpp  moonshine.hpp
